2008-11-28  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-background-parser.c (background_inherit):
	* ccss-cairo/ccss-border-parser.c (border_color_inherit),
	(border_style_inherit), (border_width_inherit),
	(border_side_inherit_impl), (border_radius_inherit):
	* ccss-cairo/ccss-cairo-style.c (ccss_cairo_style_get_double),
	(ccss_cairo_style_get_string), (ccss_cairo_style_get_property):
	* ccss-cairo/ccss-cairo-style.h:
	* ccss-doc/tmpl/style.sgml:
	* ccss/ccss-style-priv.h:
	* ccss/ccss-style.c (ccss_style_get_double),
	(ccss_style_get_string), (ccss_style_get_property):
	* ccss/ccss-style.h:
	* ccss/ccss-stylesheet.c (inherit_container_style):
	* examples/example-4.c (expose_cb):
	* examples/example-5.svg:
	Provide API to query ccss-cairo properties with fallbacks.

2008-11-27  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-border-image-parser.c (border_image_new):
	* examples/example-5.c:
	Fix `border-image: inherit;'.

2008-11-27  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-image.c (load_svg):
	* examples/example-5.c:
	* examples/example-5.svg:
	Use the jimmac-single-canvas-plates-approach to render sub-elements.

2008-11-27  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-background-parser.c (background_inherit):
	* ccss-cairo/ccss-border-parser.c (border_color_inherit),
	(border_style_inherit), (border_width_inherit),
	(border_side_inherit_impl), (border_left_inherit),
	(border_top_inherit), (border_right_inherit),
	(border_bottom_inherit), (border_inherit), (border_radius_inherit):
	* ccss-doc/tmpl/property.sgml:
	* ccss/ccss-property.h:
	* ccss/ccss-stylesheet.c (inherit_container_style):
	Do not inherit properties that are themselves of state `inherit'.

2008-11-27  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-border-parser.c (border_color_factory),
	(border_color_inherit), (border_style_factory),
	(border_style_inherit), (border_width_factory),
	(border_width_inherit), (border_factory_impl),